# RAG_PDF_ELASTIC

./: README.md  config.yaml  pyproject.toml  requirements.txt  test_elasticsearch_connection.py  test_transformers_import.py
src/pdf_processing_project/: llm_factory.py  main.py
src/pdf_processing_project/config/: agents.yaml  tasks.yaml
src/pdf_processing_project/tools/: custom_tool.py
